--- a/Nivel 2/Projeto 01/style.css
+++ b/Nivel 2/Projeto 01/style.css
@@ -1,3 +1,14 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+
+    text-align: center;
+}
+
+#hero {
+  width: 530px;
+  margin: auto;
+}
+
 h1 {
   font-family: 'Inter', sans-serif;
   font-size: 49px;
@@ -7,10 +18,6 @@ h1 {
 
 h1 span {
   font-weight: bold;
-}
-
-body {
-    font-family: 'Open Sans', sans-serif;
 }
 
 span, a {
