--- a/Nivel 2/Projeto 01/style.css
+++ b/Nivel 2/Projeto 01/style.css
@@ -38,7 +38,7 @@ span, a {
   color: #FF9900;
 }
 
-p {
+p, #footer {
   color: #7D7987;
 
   font-size: 14px;
@@ -47,4 +47,13 @@ p {
 
 #footer a + a {
   margin-left: 28px;
+}
+
+.line {
+  width: 520px;
+  height: 0;
+
+  margin: 0 auto 8px;
+
+  border: 1px solid #ECEFF2;
 }
