--- a/Nivel 2/Projeto 01/style.css
+++ b/Nivel 2/Projeto 01/style.css
@@ -45,6 +45,7 @@ p, #footer {
   line-height: 28px;
 }
 
+
 #footer a + a {
   margin-left: 28px;
 }
@@ -56,4 +57,10 @@ p, #footer {
   margin: 0 auto 8px;
 
   border: 1px solid #ECEFF2;
+}
+
+#balls {
+  position: fixed;
+  bottom: 0;
+  right: 0;
 }
