--- a/Nivel 2/Desafio 01/style.css
+++ b/Nivel 2/Desafio 01/style.css
@@ -1,16 +1,16 @@
 body {
   font-family: "Open Sans", sans-serif;
-  text-align: end;
+  text-align: center;
   margin: 0;
 }
 
 #hero {
     width: 592px;
-    margin: 72px;
+    margin: 0 auto 72px;
 }
 
-img {
-    margin: 100px;
+#hero img {
+  margin-bottom: 72px;
 }
 
 h1 {
@@ -18,12 +18,14 @@ h1 {
   font-size: 49px;
   line-height: 56px;
   font-weight: normal;
+
+  margin-bottom: 32px;
 }
 
 h1 span {
   font-weight: bold;
 
-  margin-bottom: 32px;
+  
 }
 
 span, a {
@@ -43,14 +45,15 @@ p, #footer {
 .line {
     width: 568px;
     height: 0;
-
-    margin: 0 8px;
+    
+    margin: 0 auto 8px;
 
     border: 1px solid #ECEFF2;
 }
 
 #balls {
     position: fixed;
-    top: 0;
+    bottom: 0;
     right: 0;
+   
 }
