O conceito de Flexbox do CSS

--- a/Nivel 2/Projeto 02/style.css
+++ b/Nivel 2/Projeto 02/style.css
@@ -9,3 +9,19 @@ body {
   margin: 65px auto 0;
   width: 1000px;
 }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 55px;
+}
+
+ul {
+  display: flex;
+  gap: 48px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
