--- a/Nivel 2/Projeto 02/style.css
+++ b/Nivel 2/Projeto 02/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  
+
+  font-family: "Open Sans", sans-serif;
 }
 
 .page {
@@ -25,3 +26,52 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+ul li a:hover {
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+  color: #1f1534;
+}
+
+h1,
+ul {
+  font-family: "Mulish", sans-serif;
+}
+
+h1 {
+  font-size: 49px;
+  line-height: 56px;
+  color: #1f1534;
+  font-weight: normal;
+  width: 490px;
+}
+
+h1 span {
+  color: #89c5cc;
+  font-weight: bold;
+}
+
+p {
+  color: #7d7987;
+  font-size: 14px;
+  line-height: 28px;
+}
+
+button {
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
+}
+
+footer {
+  font-size: 14px;
+  line-height: 28px;
+  color: #1f1534;
+  align-items: center;
+}
+
+footer a {
+  font-weight: bold;
+ }
