--- a/Nivel 2/Projeto 02/style.css
+++ b/Nivel 2/Projeto 02/style.css
@@ -2,13 +2,16 @@ body {
   margin: 0;
 
   font-family: "Open Sans", sans-serif;
+
+  background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
+
+  min-height: 100vh;
 }
 
 .page {
-  border: 1px solid red;
-  padding: 80px;
-  margin: 65px auto 0;
   width: 1000px;
+  margin: 0 auto;
+  padding-top: 65px;
 }
 
 nav {
@@ -22,7 +25,7 @@ nav {
 ul {
   display: flex;
   gap: 48px;
-  list-style-type: none;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -60,11 +63,13 @@ h1 span {
 }
 
 section p {
-  color: #7d7987;
   font-size: 14px;
   line-height: 28px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  color: #7D7987;
+
+  width: 440px;
+
+  margin: 40px 0;
 }
 
 button {
@@ -102,3 +107,8 @@ footer a {
  }
 
 
+#ball {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
