--- a/Nivel 2/Projeto 02/style.css
+++ b/Nivel 2/Projeto 02/style.css
@@ -32,11 +32,16 @@ ul {
 
 ul li a:hover {
   font-weight: bold;
+  opacity: 1;
 }
 
 a {
   text-decoration: none;
   color: #1f1534;
+}
+
+ul li a {
+  opacity: 0.5;
 }
 
 h1, ul {
