--- a/Nivel 2/Desafio 02/style.css
+++ b/Nivel 2/Desafio 02/style.css
@@ -9,17 +9,17 @@ body {
   }
   
   .page {
-    width: 600px;
+    width: 1000px;
     margin: 0 auto;
     padding-top: 65px;
   }
   
   nav {
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
   
-    margin-bottom: 15px;
+    margin-bottom: 55px;
   }
   
   ul {
@@ -27,6 +27,7 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    gap: 48px;
   }
   
   a {
@@ -63,10 +64,17 @@ body {
     font-weight: bold;
   }
   
+  main{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
   section p {
     font-size: 14px;
     line-height: 28px;
     color: #7d7987;
+    width: 440px;
   
     margin: 40px 0;
   }
@@ -74,14 +82,17 @@ body {
   button {
     color: white;
     font-family: "Open Sans", sans-serif;
+    text-transform: uppercase;
+
   
     background: #69B99D;
     border: 0;
-    padding: 0 50px 30px;
+    padding: 14px 32px;
   
     display: flex;
-    justify-content: space-around;
-    gap: 50px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
   
     border-radius: 4px;
   
@@ -99,6 +110,7 @@ body {
     text-align: center;
   
     margin-top: 80px;
+    margin-bottom: 30px;
   }
   
   footer a {
@@ -106,6 +118,7 @@ body {
   }
   
   #balls {
+    position: fixed;
       bottom: 0;
       right: 0;
   }
