--- a/Stage3/Projeto03/style.css
+++ b/Stage3/Projeto03/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
 
@@ -32,10 +37,11 @@ header h1 {
     font-size: 36px;
     line-height: 42px;
     color: white;
+
+    margin-bottom: 24px;
 }
 
 header p {
-    font-family: 'Poppins';
     font-size: 16px;
     line-height: 26px;
 
@@ -65,4 +71,44 @@ fieldset legend {
     line-height: 34px;
     border-bottom: 1px solid #E6E6F0;
     padding-bottom: 16px;
+}
+
+.input-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-wrapper label {
+    font-size: 14px;
+    line-height: 24px;
+
+    color: #4E4958;   
+}
+
+.input-wrapper label span {
+    margin-left: 12px;
+
+    font-size: 12px;
+    line-height: 20px;
+
+    color: #C1BCCC;
+}
+
+.input-wrapper input {
+    background: #FAFAFC;
+
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+
+    height: 56px;
+
+    padding: 0 24px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+
+    color: #C1BCCC;
 }
