--- a/Stage3/Projeto03/style.css
+++ b/Stage3/Projeto03/style.css
@@ -61,6 +61,16 @@ form {
 
 fieldset {
     border: none;
+
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.fieldset-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 }
 
 fieldset legend {
@@ -91,10 +101,14 @@ fieldset legend {
     font-size: 12px;
     line-height: 20px;
 
-    color: #C1BCCC;
+    color: #6c6a71;
 }
 
-.input-wrapper input {
+.input-wrapper label span:hover {
+    color: #747379;
+}
+
+.input-wrapper input, .input-wrapper textarea {
     background: #FAFAFC;
 
     border: 1px solid #E6E6F0;
@@ -110,5 +124,10 @@ fieldset legend {
     font-size: 16px;
     line-height: 26px;
 
-    color: #C1BCCC;
+    color: #6c6a71;
+}
+
+.input-wrapper textarea {
+    padding: 0;
+    height: 168px;
 }
