--- a/Stage3/Projeto03/style.css
+++ b/Stage3/Projeto03/style.css
@@ -18,6 +18,7 @@ body::before {
     top: 0;
     left: 0;
     z-index: -1;
+
     background: #121214;
 }
 
@@ -93,11 +94,14 @@ fieldset legend {
     flex-direction: column;
 }
 
-.input-wrapper label {
+.input-wrapper label,
+.checkbox-wrapper label {
     font-size: 14px;
     line-height: 24px;
 
-    color: #4E4958;   
+    color: #4E4958;
+    
+    margin-bottom: 8px;
 }
 
 .input-wrapper label span {
@@ -157,4 +161,44 @@ fieldset legend {
 
 .col-3 > div:nth-child(1) {
     width: 100%;
+}
+
+
+.checkbox-wrapper {
+    position: relative;
+}
+
+.checkbox-wrapper label {
+    display: flex;
+    gap: 16px;
+
+    margin: 0;
+}
+
+.checkbox-wrapper input {
+    position: absolute;
+
+    width: 24px;
+    height: 24px;
+
+    opacity: 0;
+}
+
+.checkbox-wrapper label::before {
+    content: '';
+    width: 24px;
+    height: 24px;
+
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+
+    display: block;
+}
+
+.checkbox-wrapper input:checked + label::before {
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1211_20)'%3E%3Cpath d='M9 16.17L4.83 12L3.41 13.41L9 19L21 7L19.59 5.59L9 16.17Z' fill='%2342D3FF'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1211_20'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+}
+
+.checkbox-wrapper input:focus + label::before {
+    outline: 2px solid black;
 }
