--- a/Stage3/Projeto03/style.css
+++ b/Stage3/Projeto03/style.css
@@ -202,3 +202,39 @@ fieldset legend {
 .checkbox-wrapper input:focus + label::before {
     outline: 2px solid black;
 }
+
+footer {
+    background: #F0F0F4;
+
+    height: 136px;
+
+    display: flex;
+    flex-direction: column;
+
+    padding: 40px 64px;
+
+    margin-bottom: 100px;
+
+    border-top: 1px solid #D6D6D6;
+
+    border-radius: 0 0 8px 8px;
+}
+
+footer .button {
+    height: 56px;
+    border-radius: 8px;
+    background: #04D361;
+    border: none;
+
+    font-family: 'Archivo';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+}
+
+footer .button:hover {
+    background: #08a04c;
+
+}
