--- a/Stage3/Projeto04/style.css
+++ b/Stage3/Projeto04/style.css
@@ -4,10 +4,15 @@
     box-sizing: border-box;
 }
 
+:root {
+    font-size: 62.5%;
+}
+
 body {
     background: #FFFFFF;
 
-    padding: 60px 23px 66px;
+    padding: 6.0rem 2.3rem 6.6rem;
+    font-size: 1.6rem;
 }
 
 p  {
@@ -27,8 +32,8 @@ h1 {
     font-family: 'Epilogue';
     font-style: normal;
     font-weight: 800;
-    font-size: 40px;
-    line-height: 48px;
+    font-size: 4.0rem;
+    line-height: 4.8rem;
   
     color: #090039;
 }
