--- a/Stage3/Projeto04/style.css
+++ b/Stage3/Projeto04/style.css
@@ -9,54 +9,69 @@
 }
 
 body {
+    font-family: 'Epilogue';
+
     background: #FFFFFF;
 
     padding: 6.0rem 2.3rem 6.6rem;
     font-size: 1.6rem;
 }
 
-p  {
-    font-family: 'Epilogue';
-    font-style: normal;
+main p:first-child {    
+   
     font-weight: 400;
-    font-size: 16px;
-    line-height: 32px;
+    font-size: 1.6rem;
+    line-height: 3.2rem;
 
-    letter-spacing: 3px;
+    letter-spacing: 0.3rem;
     text-transform: uppercase;
 
     color: #7158EF;
+
+    margin-bottom: 1.7rem;
 }
 
 h1 {
-    font-family: 'Epilogue';
-    font-style: normal;
+   
     font-weight: 800;
     font-size: 4.0rem;
     line-height: 4.8rem;
   
     color: #090039;
+
+    margin-bottom: 1.5rem;
+}
+
+h1 + p {   
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 32px;
+   
+    color: rgba(10, 0, 57, 0.64);
 }
 
 a {
-    font-family: 'Epilogue';
-    font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 32px;
+    font-size: 1.6rem;
+    line-height: 3.2rem;
+
+    text-decoration: none;
 
     color: #090039;
 }
 
+a:hover {
+   font-weight: 800;
+}
+
 ul {
+    margin-top: 7.2rem;
     list-style: none;
     display: flex;
     flex-direction: column;
 }
 
 span {
-    font-family: 'Epilogue';
-    font-style: normal;
     font-weight: 800;
     font-size: 72px;
     line-height: 80px;
@@ -69,8 +84,6 @@ span {
 }
 
 li {
-    font-family: 'Epilogue';
-    font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 32px;
