--- a/Stage3/Projeto05/style.css
+++ b/Stage3/Projeto05/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 :root {
     --ff-heading: 'Epilogue', sans-serif;
     --ff-texting: 'Open sans', sans-serif;
@@ -6,6 +11,10 @@
     --bg-primary: hsl(var(--hue), 22%, 20%);
     --fc-primary: hsl(var(--hue), 0%, 100%);
     --fc-secondary: hsl(var(--hue), 50%, 80%);
+
+    font-size: 62.5%;
+    --fs-body: 1.6rem;
+    --fs-heading: 4rem;
 }
 
 body {
@@ -13,13 +22,31 @@ body {
 
     background-color: var(--bg-primary);
     color: var(--fc-primary);
+
+    font-size: var(--fs-body);
 }
 
 header {
+    margin-top: 10rem 0 8rem;
     font-family: var(--ff-heading);
+
+    text-align: center;
 }
 
 header p {
     color: var(--fc-secondary);
     text-transform: uppercase;
+
+    line-height: 3.2rem;
+    letter-spacing: 3px;
+
+    font-weight: 400;
+
+    margin-bottom: 1.7rem;
+}
+
+header h1 {
+    font-weight: 800;
+    font-size: var(--fs-heading);
+    line-height: 4.8rem;
 }
