--- a/Stage3/Projeto05/style.css
+++ b/Stage3/Projeto05/style.css
@@ -26,6 +26,16 @@ body {
     font-size: var(--fs-body);
 }
 
+.page {
+    max-width: 33rem;
+    margin: 0 auto;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
 header {
     margin-top: 10rem 0 8rem;
     font-family: var(--ff-heading);
@@ -49,4 +59,15 @@ header h1 {
     font-weight: 800;
     font-size: var(--fs-heading);
     line-height: 4.8rem;
+}
+
+.card img {
+    height: 41.6rem;
+    object-fit: cover;
+}
+
+.card h2 {
+   position: absolute;
+   bottom: 5.2rem;
+   left: 2.8rem; 
 }
