--- a/Stage3/Projeto05/style.css
+++ b/Stage3/Projeto05/style.css
@@ -11,6 +11,7 @@
     --bg-primary: hsl(var(--hue), 22%, 20%);
     --fc-primary: hsl(var(--hue), 0%, 100%);
     --fc-secondary: hsl(var(--hue), 50%, 80%);
+    --fc-secondary-dark: hsl(var(--hue), 100%, 11%, 1);
 
     font-size: 62.5%;
     --fs-body: 1.6rem;
@@ -61,13 +62,45 @@ header h1 {
     line-height: 4.8rem;
 }
 
+main {
+    display: grid;
+    gap: 3.2rem;
+}
+
+.card {
+    position: relative;
+
+    font-family: var(--ff-heading);
+}
 .card img {
     height: 41.6rem;
     object-fit: cover;
+    border-radius: 6px;
 }
 
 .card h2 {
    position: absolute;
    bottom: 5.2rem;
-   left: 2.8rem; 
+   left: 2.8rem;
+
+   font-size: var(--ff-heading);
+   font-weight: 800;
+
+   display: flex;
+   flex-direction: column;
+   gap: 3.2rem;
+}
+
+.card h2 span {
+    border-radius: 2rem;
+    background-color: var(--fc-primary);
+    font-size: var(--fs-body);
+    font-weight: 400;
+    color: var(--fc-secondary-dark);
+    padding: 0 1.6rem;
+    height: 3.8rem;
+
+    display: inline-flex;
+    align-items: center;
+    width: fit-content;
 }
