Transições e transformações

--- a/Stage3/Projeto05/style.css
+++ b/Stage3/Projeto05/style.css
@@ -42,6 +42,9 @@ header {
     font-family: var(--ff-heading);
 
     text-align: center;
+
+    margin-top: 10rem;
+    margin-bottom: 8rem;
 }
 
 header p {
@@ -75,7 +78,16 @@ main {
 .card img {
     height: 41.6rem;
     object-fit: cover;
+
     border-radius: 6px;
+
+    transition: transform 200ms;
+}
+
+.card img:hover {
+    transform: scale(1.1);
+    opacity: 0.5;
+
 }
 
 .card h2 {
