--- a/Stage3/Projeto05/style.css
+++ b/Stage3/Projeto05/style.css
@@ -17,7 +17,8 @@
   
     font-size: 62.5%;
     --fs-body: 1.6rem;
-    --fs-heading: 4rem; 
+    --fs-heading: clamp(4rem, 1rem + 5vw, 5.6rem);
+    --fs-heading-sm: clamp(3rem, 0,5rem + 3vw, 4rem);
   }
   
   body {
@@ -30,7 +31,8 @@
   }
   
   .page {
-    max-width: 33rem;
+    max-width: clamp(33rem, 20rem +20vw, 117rem);
+    padding: 0 5rem;
     margin: 0 auto;
   }
   
@@ -82,6 +84,7 @@
   .card img {
     height: 41.6rem;
     object-fit: cover;
+    filter: brightness(0.5);
   
     border-radius: 6px;
   
@@ -98,7 +101,7 @@
     bottom: 5.2rem;
     left: 2.8rem;
   
-    font-size: 4rem;
+    font-size: var(--fs-heading-sm);
     font-weight: 800;
   
     display: flex;
@@ -148,14 +151,11 @@
   
   
   @media (min-width: 700px) {
-    :root {
-      --fs-heading: 5.6rem;
-    }
-    
-    .page {
+        
+    /* .page {
       max-width: 117rem;
       padding: 0 5rem;
-    }
+    } */
   
     main {
       grid-template-columns: 1fr 1fr;
