--- a/Stage3/Desafio06-Avancado/style.css
+++ b/Stage3/Desafio06-Avancado/style.css
@@ -29,36 +29,17 @@ body {
     align-items: center;
     justify-content: center;
     width: 20vw;
-   
+
+    width: 221.81px;
+    height: 168.11px;
+    background-image: url(./img/toupeira6.svg);
+      
 }
 
-.hole * img:nth-child(1) {
-    animation: show 700ms 350ms backwards;
-}
-
-.hole * img:nth-child(2) {
-    animation: show 700ms 350ms backwards;
-}
-
-.hole * img:nth-child(3) {
-    animation: show 700ms 350ms backwards;
-}
-
-.hole * img:nth-child(4) {
-    animation: show 700ms 350ms backwards;
-}
-
-.hole * img:nth-child(5) {
-    animation: show 700ms 350ms backwards;
-}
-
-.hole * img:nth-child(6) {
-    animation: show 700ms 350ms backwards;
-}
-
-.hole * img {
-    width: auto;
-    height: auto;
+.hole:hover {
+    animation: show 0.7s;
+    animation-delay: 1s;
+    
 }
 
 .t1 {
@@ -94,10 +75,27 @@ body {
 
 @keyframes show {
     0% {
-        opacity: 0;
+        background-image: url(./img/toupeira1.svg);
       }
     
+    20% {
+        background-image: url(./img/toupeira2.svg);
+      }
+
+      40% {
+        background-image: url(./img/toupeira3.svg);
+      }
+
+      60% {
+        background-image: url(./img/toupeira4.svg);
+      }
+
+      80% {
+        background-image: url(./img/toupeira5.svg);
+      }
+
       100% {
-        opacity: 1;
+        background-image: url(./img/toupeira6.svg);
+
       }
 }
