--- a/Stage3/Projeto06/style.css
+++ b/Stage3/Projeto06/style.css
@@ -71,10 +71,35 @@ ul {
     margin-bottom: 2.4rem;
 }
 
-@media (min-width: 770px) {
-    body {
-        color: #A54328;
+@media (min-width: 1120px) {
+    main {
+        flex-direction: row;
+        max-width: fit-content;
+        gap: 16rem;
     }
 
+    .recipe {
+        max-width: 43.5rem;
+    }
+
+    .ingredients {
+        max-width: 52.5rem;
+    }
+
+    h1, h2 {
+        font-size: 4rem;
+        line-height: 5rem;
+    }
+
+    p, li, strong {
+        font-size: 2rem;
+        line-height: 2.5rem;
+    }
+
+    button {
+        padding: 1rem 2rem;
+        font-size: 1.4rem;
+        line-height: 2.4rem;
+    }
 }
 
