--- a/Stage5/Projeto02/style.css
+++ b/Stage5/Projeto02/style.css
@@ -15,9 +15,11 @@
     --ot-input: #02799D;
     --bd-input: rgba(73, 80, 87, 0.3);
     --tt-placeholder: rgba(73, 80, 87, 0.5);
+    --bg-input: #DCE2E9;
 
     --tt-button: #FFF;
     --bg-button: #02799D;
+    --bg-button-hover: #01475C;
     
     --bg-error: #F03E3E;
     --tt-error: #FFF;
@@ -25,15 +27,18 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #040924;
+    background-color: #040924;    
+}
+
+body, input, button {
     font-size: 1.6rem;
+    line-height: 2rem;
 }
 
 .container {
     display: grid;
     place-content: center;
     height: 100vh;
-
 }
 
 .card {
@@ -45,4 +50,135 @@ body {
     background: #FFF;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.10);
     border-radius: .6rem;
+}
+
+.title {
+    font-size: 3.2rem;
+    line-height: 4rem;
+    color: var(--tt-heading);
+}
+
+form {
+    width: 30rem;
+}
+
+form h1 {
+    margin-bottom: 3.2rem;
+}
+
+form label {
+    line-height: 1.8rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: var(--tt-label);
+    margin-bottom: .8rem;
+    display: block;
+}
+
+form input {
+    width: 100%;
+    border: 1px solid var(--bd-input);
+    background: var(--bg-input);
+    padding: 1.6rem;
+    border-radius: .4rem;
+}
+
+form input:focus {
+    outline: 2px solid var(--ot-input);
+}
+
+form input::placeholder {
+    color: var(--tt-placeholder);
+}
+
+.input-wrapper + .input-wrapper {
+    margin-top: 1.6rem;
+}
+
+form button {
+    margin-top: 3.2rem;
+    padding: 1.6rem;
+    width: 100%;
+
+    border-radius: .4rem;
+    border: none;
+    background-color: var(--bg-button);
+    color: var(--tt-button);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .8rem;
+
+    font-weight: bold;
+    cursor: pointer;
+
+    transition: background .3s;
+}
+
+form button:hover {
+    background: var(--bg-button-hover);
+}
+
+/* modal */
+.modal-wrapper {
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.70);
+
+    display: grid;
+    place-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-wrapper.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    position: relative;
+}
+
+.modal button {
+    background: none;
+    border: none;
+
+    position: absolute;
+    top: 1.6rem;
+    right: 1.6rem;
+
+    cursor: pointer;
+
+    transition: transform .3s;
+}
+
+.modal button:hover {
+    transform: scale(1.1);
+}
+
+/* alert error */
+.alert-error {
+    position: absolute;
+    background: var(--bg-error);
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: var(--tt-error);
+    padding: .8rem 0;
+    font-weight: bold;
+
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(-30px);
+    transition: transform .5s;
+}
+
+.alert-error.active {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
 }
